# boxcluster-visualization

./: .gitignore  README.md  angular.json  changelogs.md  codebase.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  out.txt  scatters.tar.xz  tauri.conf.json  temp.txt  test.txt
src-tauri/resources/: datapoints.json  datapoints2.json  datapoints_with_subpatterns.json  dev_patterns_light.txt  dev_tensor_light.txt  intersection_details.json  intersections.json  intersections2.json  page_patterns.json  pattern.json  root_patterns.json  rss_evolution.json  subpatterns.json  subpatterns_identifiers.json
src-tauri/src/: application_manager.rs  lib.rs  main.rs  obs.txt
src-tauri/src/commands/: application_commands.rs  mod.rs  paginator_commands.rs
src-tauri/src/common/: generic_error.rs  identifier_mapper.rs  mod.rs  ordered_pair.rs  progress_bar.rs
src-tauri/src/controller/: dag_viewer.rs  dynamic_paginator_controller.rs  mod.rs  pattern_service.rs
src-tauri/src/dag/: dag.rs  mod.rs
src-tauri/src/database/: dag.rs  dag_node.rs  datapoint.rs  intersections_details.rs  mod.rs  pattern.rs  raw_pattern.rs  subtensor.rs  tensor.rs
src-tauri/src/io/: mod.rs  tensor_reader.rs  translator.rs
src-tauri/src/metrics/: datapoint.rs  full_model_rss.rs  metric.rs  mod.rs  test.py
src-tauri/src/model/: identifier_mapper.rs  identifier_representation.rs  mod.rs
src-tauri/src/post_analysis/: datapoints_creator.rs  mod.rs  multidim_scaling.rs
src-tauri/temp/: debug.py  right.txt  wrong.txt
src-tauri/tests/: dag.rs  distances.rs  rss_evolution.rs
(+257 files in other folders)
