[package]
name = "boxcluster-visualization"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
itertools = "0.10.5"
debug_print = "1.0.0"
indicatif = "0.17.2"
colored = "2.0.0"
ndarray = "0.14.0"
pyo3 = { version = "0.18", features = ["extension-module", "auto-initialize"] }
numpy = "0.18"
plotters = "0.3.5"
rayon = "1.7.0"
nalgebra = "0.29.0"
rand = "0.8.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

profile.release.incremental = true
